--- a/src/main/java/com/dyw/client/form/MonitorForm.form
+++ b/src/main/java/com/dyw/client/form/MonitorForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.MonitorForm">
   <grid id="27dc6" binding="monitor" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="862" height="627"/>
+      <xy x="20" y="20" width="906" height="627"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -54,6 +54,7 @@
                               <gridbag weightx="0.0" weighty="0.0"/>
                             </constraints>
                             <properties>
+                              <font size="20"/>
                               <text value="通行成功记录"/>
                             </properties>
                           </component>
@@ -110,6 +111,7 @@
                               <gridbag weightx="0.0" weighty="0.0"/>
                             </constraints>
                             <properties>
+                              <font size="20"/>
                               <text value="通行失败记录"/>
                             </properties>
                           </component>
@@ -168,6 +170,7 @@
                               <gridbag weightx="0.0" weighty="0.0"/>
                             </constraints>
                             <properties>
+                              <font size="20"/>
                               <text value="通行报警记录"/>
                             </properties>
                           </component>
@@ -216,14 +219,18 @@
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                           <gridbag top="0" left="10" bottom="0" right="10" weightx="0.1" weighty="0.0"/>
                         </constraints>
-                        <properties/>
+                        <properties>
+                          <font size="20"/>
+                        </properties>
                       </component>
                       <component id="ee7be" class="javax.swing.JComboBox" binding="eventSelectionCombo">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                           <gridbag top="0" left="10" bottom="0" right="10" weightx="0.1" weighty="0.0"/>
                         </constraints>
-                        <properties/>
+                        <properties>
+                          <font size="20"/>
+                        </properties>
                       </component>
                       <component id="31dd3" class="javax.swing.JTextField" binding="passCardSelectionText">
                         <constraints>
@@ -232,7 +239,10 @@
                           </grid>
                           <gridbag top="0" left="10" bottom="0" right="10" weightx="0.1" weighty="0.0"/>
                         </constraints>
-                        <properties/>
+                        <properties>
+                          <font size="20"/>
+                          <preferredSize width="60" height="37"/>
+                        </properties>
                       </component>
                       <component id="b3895" class="javax.swing.JTextField" binding="nameSelectionText">
                         <constraints>
@@ -241,7 +251,10 @@
                           </grid>
                           <gridbag top="0" left="10" bottom="0" right="10" weightx="0.1" weighty="0.0"/>
                         </constraints>
-                        <properties/>
+                        <properties>
+                          <font size="20"/>
+                          <preferredSize width="60" height="37"/>
+                        </properties>
                       </component>
                       <component id="81dca" class="javax.swing.JLabel" binding="startTimeSelectionLabel">
                         <constraints>
@@ -249,15 +262,17 @@
                           <gridbag weightx="0.1" weighty="0.0"/>
                         </constraints>
                         <properties>
+                          <font size="20"/>
                           <text value="开始时间"/>
                         </properties>
                       </component>
-                      <component id="f8ebd" class="com.dyw.client.controller.DateSelector" binding="startTimeSelectionButton" custom-create="true">
+                      <component id="f8ebd" class="com.dyw.client.service.DateSelectorButtonService" binding="startTimeSelectionButton" custom-create="true">
                         <constraints>
                           <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                           <gridbag top="0" left="10" bottom="0" right="10" weightx="0.1" weighty="0.0"/>
                         </constraints>
                         <properties>
+                          <font size="20"/>
                           <text value="2019-03-11 21:45:18"/>
                         </properties>
                       </component>
@@ -267,15 +282,17 @@
                           <gridbag weightx="0.1" weighty="0.0"/>
                         </constraints>
                         <properties>
+                          <font size="20"/>
                           <text value="结束时间"/>
                         </properties>
                       </component>
-                      <component id="a0232" class="com.dyw.client.controller.DateSelector" binding="endTimeSelectionButton" custom-create="true">
+                      <component id="a0232" class="com.dyw.client.service.DateSelectorButtonService" binding="endTimeSelectionButton" custom-create="true">
                         <constraints>
                           <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                           <gridbag top="0" left="10" bottom="0" right="10" weightx="0.1" weighty="0.0"/>
                         </constraints>
                         <properties>
+                          <font size="20"/>
                           <text value="2019-03-11 21:45:18"/>
                         </properties>
                       </component>
@@ -285,6 +302,7 @@
                           <gridbag top="0" left="10" bottom="0" right="10" weightx="0.1" weighty="0.0"/>
                         </constraints>
                         <properties>
+                          <font size="20"/>
                           <text value="查询"/>
                         </properties>
                       </component>
@@ -317,14 +335,115 @@
                       </scrollpane>
                     </children>
                   </grid>
-                  <grid id="4340d" binding="pageSelectionPanel" layout-manager="GridBagLayout">
+                  <grid id="4340d" binding="pageSelectionBottomPanel" layout-manager="GridBagLayout">
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="1.0" weighty="0.1"/>
                     </constraints>
                     <properties/>
                     <border type="none"/>
-                    <children/>
+                    <children>
+                      <grid id="6394" binding="pageSelectionPanel" layout-manager="GridBagLayout">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.4" weighty="0.0"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="49ca9" class="javax.swing.JButton" binding="previousPageButton">
+                            <constraints>
+                              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <font size="20"/>
+                              <text value="上一页"/>
+                            </properties>
+                          </component>
+                          <component id="10af7" class="javax.swing.JButton" binding="nextPageButton">
+                            <constraints>
+                              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <font size="20"/>
+                              <text value="下一页"/>
+                            </properties>
+                          </component>
+                          <component id="2c236" class="javax.swing.JButton" binding="firstPageButton">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <gridbag weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <font size="20"/>
+                              <text value="首  页"/>
+                            </properties>
+                          </component>
+                        </children>
+                      </grid>
+                      <grid id="b629f" binding="perPageNumberPanel" layout-manager="GridBagLayout">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.3" weighty="0.0"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="27f3" class="javax.swing.JSpinner" binding="perPageNumberSpinner">
+                            <constraints>
+                              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <gridbag weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <font size="20"/>
+                              <preferredSize width="60" height="40"/>
+                            </properties>
+                          </component>
+                          <component id="aa3d8" class="javax.swing.JLabel" binding="perPageNumberLabel">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <gridbag weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <font size="20"/>
+                              <text value="每页显示数量："/>
+                            </properties>
+                          </component>
+                          <component id="71e36" class="javax.swing.JButton" binding="perPageNumberButton">
+                            <constraints>
+                              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <font size="20"/>
+                              <text value="更改"/>
+                            </properties>
+                          </component>
+                        </children>
+                      </grid>
+                      <grid id="aaff" binding="passTotalNumberPanel" layout-manager="GridBagLayout">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.3" weighty="0.0"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="a9e0a" class="javax.swing.JLabel" binding="passTotalNumberLabel">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <gridbag weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <font size="20"/>
+                              <text value="通行信息"/>
+                            </properties>
+                          </component>
+                        </children>
+                      </grid>
+                    </children>
                   </grid>
                 </children>
               </grid>
