--- a/src/main/java/com/dyw/client/form/MonitorForm.form
+++ b/src/main/java/com/dyw/client/form/MonitorForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.MonitorForm">
   <grid id="27dc6" binding="monitor" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="906" height="627"/>
+      <xy x="20" y="20" width="971" height="627"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -50,12 +50,31 @@
                         <children>
                           <component id="b3cfc" class="javax.swing.JLabel" binding="passSuccessTitleLabel">
                             <constraints>
-                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                               <gridbag weightx="0.0" weighty="0.0"/>
                             </constraints>
                             <properties>
-                              <font size="20"/>
+                              <font size="26"/>
                               <text value="通行成功记录"/>
+                            </properties>
+                          </component>
+                          <component id="a377e" class="javax.swing.JCheckBox" binding="passSuccessRollingCheckBox">
+                            <constraints>
+                              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <gridbag top="0" left="50" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <selected value="true"/>
+                              <text value="是否滚动"/>
+                            </properties>
+                          </component>
+                          <component id="5b7fc" class="javax.swing.JButton" binding="paaSuccessClearButton">
+                            <constraints>
+                              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <gridbag weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <text value="清空页面"/>
                             </properties>
                           </component>
                         </children>
@@ -112,8 +131,27 @@
                               <gridbag weightx="0.0" weighty="0.0"/>
                             </constraints>
                             <properties>
-                              <font size="20"/>
+                              <font size="26"/>
                               <text value="通行失败记录"/>
+                            </properties>
+                          </component>
+                          <component id="a57cc" class="javax.swing.JCheckBox" binding="passFaultRollingCheckBox">
+                            <constraints>
+                              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <gridbag top="0" left="50" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <selected value="true"/>
+                              <text value="是否滚动"/>
+                            </properties>
+                          </component>
+                          <component id="bfa5e" class="javax.swing.JButton" binding="paaFaultClearButton">
+                            <constraints>
+                              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <gridbag weightx="0.0" weighty="0.0"/>
+                            </constraints>
+                            <properties>
+                              <text value="清空页面"/>
                             </properties>
                           </component>
                         </children>
@@ -139,7 +177,7 @@
                               <component id="94abf" class="javax.swing.JTable" binding="passFaultContentTable">
                                 <constraints/>
                                 <properties>
-                                  <font size="20" style="1"/>
+                                  <font size="16" style="1"/>
                                   <rowHeight value="160"/>
                                 </properties>
                               </component>
@@ -171,7 +209,7 @@
                               <gridbag weightx="0.0" weighty="0.0"/>
                             </constraints>
                             <properties>
-                              <font size="20"/>
+                              <font size="26"/>
                               <text value="通行报警记录"/>
                             </properties>
                           </component>
@@ -318,6 +356,8 @@
                           <component id="1c045" class="javax.swing.JTable" binding="resultContentTable">
                             <constraints/>
                             <properties>
+                              <autoCreateColumnsFromModel value="true"/>
+                              <autoCreateRowSorter value="false"/>
                               <font size="18" style="1"/>
                               <rowHeight value="160"/>
                             </properties>
