--- a/src/main/java/com/dyw/client/form/SystemForm.form
+++ b/src/main/java/com/dyw/client/form/SystemForm.form
@@ -26,12 +26,33 @@
             <children>
               <grid id="54bab" binding="equipmentManagementToolBarPanel" layout-manager="GridBagLayout">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="1.0" weighty="0.1"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <component id="f62e6" class="javax.swing.JButton" binding="equipmentManagementAddButton">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <font size="20"/>
+                      <text value="添加"/>
+                    </properties>
+                  </component>
+                  <component id="3fd63" class="javax.swing.JButton" binding="equipmentManagementDeleteButton">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <font size="20"/>
+                      <text value="删除"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
               <grid id="52265" binding="equipmentManagementContentPanel" layout-manager="GridBagLayout">
                 <constraints>
@@ -71,7 +92,7 @@
             <children>
               <grid id="324e9" binding="accountManagementToolBarPanel" layout-manager="GridBagLayout">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="1.0" weighty="0.1"/>
                 </constraints>
                 <properties/>
@@ -222,12 +243,33 @@
             <children>
               <grid id="b7a13" binding="faceCollectionManagementToolBarPanel" layout-manager="GridBagLayout">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="1.0" weighty="0.1"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <component id="8555f" class="javax.swing.JButton" binding="faceCollectionManagementAddButton">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <font size="20"/>
+                      <text value="添加"/>
+                    </properties>
+                  </component>
+                  <component id="83a1a" class="javax.swing.JButton" binding="faceCollectionManagementDeleteButton">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <font size="20"/>
+                      <text value="删除"/>
+                    </properties>
+                  </component>
+                </children>
               </grid>
               <grid id="91958" binding="faceCollectionManagementContentPanel" layout-manager="GridBagLayout">
                 <constraints>
