--- a/src/main/java/com/dyw/client/form/ProtectionForm.form
+++ b/src/main/java/com/dyw/client/form/ProtectionForm.form
@@ -95,7 +95,9 @@
                         <children>
                           <component id="a08bd" class="javax.swing.JList" binding="personManagementBaseList">
                             <constraints/>
-                            <properties/>
+                            <properties>
+                              <font size="20"/>
+                            </properties>
                           </component>
                         </children>
                       </scrollpane>
@@ -128,7 +130,81 @@
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <grid id="50540" binding="personManagementContentToolBarPanel" layout-manager="GridBagLayout">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="1.0" weighty="0.1"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="540cd" class="javax.swing.JButton" binding="personManagementContentToolBarAddButton">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <text value="人员添加"/>
+                        </properties>
+                      </component>
+                      <component id="2addd" class="javax.swing.JButton" binding="personManagementContentToolBarEditButton">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <text value="人员编辑"/>
+                        </properties>
+                      </component>
+                      <component id="d9c86" class="javax.swing.JButton" binding="personManagementContentToolBarDeleteButton">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <text value="人员删除"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
+                  <grid id="4a809" binding="personManagementContentResultPanel" layout-manager="GridBagLayout">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="0.0" weighty="0.8"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <scrollpane id="1b557" binding="personManagementContentResultScroll">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="1.0" weighty="1.0"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="2c30b" class="javax.swing.JTable" binding="personManagementContentResultTable">
+                            <constraints/>
+                            <properties>
+                              <font size="24"/>
+                              <rowHeight value="45"/>
+                            </properties>
+                          </component>
+                        </children>
+                      </scrollpane>
+                    </children>
+                  </grid>
+                  <grid id="18820" binding="personManagementContentSelectPagePanel" layout-manager="GridBagLayout">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="0.0" weighty="0.1"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children/>
+                  </grid>
+                </children>
               </grid>
             </children>
           </grid>
